# snapser-byosnaps

./: .gitignore  README.md
ByoSnapCSharp/: Dockerfile  Dockerfile-amd64  Program.cs  README.md  README_bck.md  Startup.cs  snapser-byosnap-profile.json  snapser-snapend-manifest.json
ByoSnapCSharp/Controllers/: HelloController.cs
advanced/: README.md
advanced/ByoSnapCSharp/: ByoSnapCSharp.sln  Dockerfile  GOTCHAS.md  README.md  Startup.cs  generate_swagger.sh
advanced/byosnap-go/: GOTCHAS.md  README.md  constants.go  go.mod  main.go
advanced/byosnap-node-ts/: GOTCHAS.md  README.md  package.json
advanced/byosnap-python/: app.py  generate_swagger.py  run_dev_server.sh
ai/byosnap-anthropic/: .update.env  app.py  generate_swagger.py  requirements.txt
ai/byosnap-gemini/: Dockerfile  app.py  (+2 more)
basic/: README.md  SETUP.md  SNAPCTL_SETUP.md
byosnap-go/: 1q  Dockerfile  README.md  README_bck.md  go.mod  go.sum  main.go  snapser-byosnap-profile.json  snapser-snapend-manifest.json  swagger.json
byosnap-python/: .dockerignore  README.md  README_bck.md  docker-compose.dev.yml  requirements.txt  run_dev_server.sh  snapser-byosnap-profile.json  snapser-snapend-manifest.json  swagger.json
byosnap-rewards/: Dockerfile  README.md  manifest.json  snapser-byosnap-profile.json  snapser-snapend-manifest.json  swagger.json
core/: README.md  publish-and-test-core.sh  snapser-core-test-manifest.template.json
core/byosnap-rust-api/: Cargo.toml  Dockerfile  snapser-byosnap-profile.json  test-manifest.json
core/byosnap-rust-api/src/: main.rs
inter/: README.md
(+1447 files in other folders)
