[package]
name = "byosnap-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.9.0"
actix-cors = "=0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
# HTTP client for internal Snap-to-Snap calls (e.g. the Eventbus). rustls-tls
# avoids pulling in the OpenSSL system libraries in the build image.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
